# issues-dashboard

./: .gitignore  README.es.md  README.md  biome.json  package-lock.json  package.json  turbo.json
apps/api/: package.json  pyproject.toml
apps/api/scripts/: build-exe.cjs
apps/api/src/dashboard_api/: __init__.py  __main__.py  dev_server.py  settings.py
apps/api/src/dashboard_api/app/: __init__.py  main.py
apps/api/src/dashboard_api/application/: __init__.py
apps/api/src/dashboard_api/application/issues/: __init__.py  service.py
apps/api/src/dashboard_api/application/session/: __init__.py  service.py
apps/api/src/dashboard_api/domain/: __init__.py
apps/api/src/dashboard_api/domain/issues/: __init__.py  defaults.py  models.py
apps/api/src/dashboard_api/infrastructure/: __init__.py
apps/api/src/dashboard_api/infrastructure/github/: __init__.py  client.py
apps/api/src/dashboard_api/infrastructure/persistence/: __init__.py  sqlite_repository.py
apps/api/src/dashboard_api/infrastructure/session/: local_session_store.py
apps/api/src/dashboard_api/presentation/: __init__.py
apps/api/src/dashboard_api/presentation/http/: __init__.py  schemas.py
apps/api/src/dashboard_api/presentation/http/routes/: __init__.py  health.py  issues.py  session.py
apps/api/src/dashboard_api/shared/: __init__.py  time.py
apps/api/tests/: __init__.py
apps/api/tests/integration/: __init__.py  test_issue_routes.py  test_session_routes.py
apps/api/tests/unit/: __init__.py  test_domain_defaults.py
apps/desktop/: main.cjs  package.json  (+3 more)
scripts/: run-turbo-dev.cjs
(+19 files in other folders)
